# all-kinds-of-examples

DesignPattern/: README
DesignPattern/Adapter/: Adaptee.h  Adapter.h  CMakeLists.txt  main.cpp
DesignPattern/Command/: CMakeLists.txt  Command.cpp  Command.h  ConcreteCommand.h  Invoker.h  Receiver.h  main.cpp
DesignPattern/Decorator/: phone  phone.cpp
DesignPattern/Factory/: AbstractFactory.cpp  CMakeLists.txt  Factory.cpp  Factory.h  ShapeFactory2.cpp  main.cpp  purge.h
DesignPattern/Observer/: CMakeLists.txt  Observer.cpp  Observer.h  Subject.cpp  Subject.h  main.cpp
DesignPattern/Proxy/: Proxy.cpp  Proxy.h  main.cpp
DesignPattern/Singleton/: CMakeLists.txt  Singleton.h  main.cpp
DesignPattern/Visitor/: CMakeLists.txt  visitor.cpp
FileWatcher/: CMakeLists.txt  FileWatcher.cpp  FileWatcher.h  README  main.cpp
HeapProfile/: CMakeLists.txt  main.cpp
PlacementNew/: placementnew  placementnew.cpp
STLsource/: sort.cpp
WatchDog/: CMakeLists.txt  WatchDog.cpp
bitmap/: bitmap.cpp  bitmap.h  main.cpp
bitmap/test/: CMakeLists.txt  bitmap_test.cpp
boost/: CMakeLists.txt  Makefile  config  config.cpp  config.txt  lock  lock.cpp  string  string.cpp  threadpool.cpp  time  time.cpp  timer  timer.cpp
cmake/practice/t1/: CMakeLists.txt
cmake/practice/t1/src/: main.c
cmake/practice/t2/: CMakeLists.txt
cmake/practice/t3/lib/: CMakeLists.txt  hello.c
cmake/practice/t4/: CMakeLists.txt
cmake/practice/t4/src/: CMakeLists.txt
cmake/tutorial/: CMakeLists.txt  tutorial.cpp
cmake/tutorial/MathFunctions/: CMakeLists.txt  MakeTable.cpp  mysqrt.cpp
curl/: CMakeLists.txt  main.cpp
effectiveC++/: 52  52.cpp  README
gflag/: Makefile  example  example.cpp  gflags.conf
glog/: Makefile  callgrind.out.4584  export.sh  gflags.conf  glog_example  glog_example.cpp
glog/logs/: glog_example.ERROR  glog_example.INFO  glog_example.WARNING  glog_example.wsrecom1.bjliuchang5.log.ERROR.20170508-160904.109634  glog_example.wsrecom1.bjliuchang5.log.ERROR.20170508-161527.111642  glog_example.wsrecom1.bjliuchang5.log.ERROR.20170508-161602.111788  glog_example.wsrecom1.bjliuchang5.log.ERROR.20170508-161827.114141  glog_example.wsrecom1.bjliuchang5.log.ERROR.20170508-161900.114682  glog_example.wsrecom1.bjliuchang5.log.ERROR.20170508-162359.116239  glog_example.wsrecom1.bjliuchang5.log.ERROR.20170508-162408.116331  glog_example.wsrecom1.bjliuchang5.log.INFO.20170508-160904.109634  glog_example.wsrecom1.bjliuchang5.log.INFO.20170508-161527.111642  glog_example.wsrecom1.bjliuchang5.log.INFO.20170508-161602.111788  glog_example.wsrecom1.bjliuchang5.log.INFO.20170508-161827.114141  glog_example.wsrecom1.bjliuchang5.log.INFO.20170508-161900.114682  glog_example.wsrecom1.bjliuchang5.log.INFO.20170508-162359.116239  glog_example.wsrecom1.bjliuchang5.log.INFO.20170508-162408.116331  glog_example.wsrecom1.bjliuchang5.log.WARNING.20170508-160904.109634  glog_example.wsrecom1.bjliuchang5.log.WARNING.20170508-161527.111642  glog_example.wsrecom1.bjliuchang5.log.WARNING.20170508-161602.111788  glog_example.wsrecom1.bjliuchang5.log.WARNING.20170508-161827.114141  glog_example.wsrecom1.bjliuchang5.log.WARNING.20170508-161900.114682  glog_example.wsrecom1.bjliuchang5.log.WARNING.20170508-162359.116239  glog_example.wsrecom1.bjliuchang5.log.WARNING.20170508-162408.116331
googlemock/: .CMakeLists.txt.swp  CMakeLists.txt  main.cpp
gperftools/: .CMakeLists.txt.swp  CMakeLists.txt  main.cpp
gtest/: Makefile  gtest.cpp  unit.cpp  unit.h
json/: Makefile  abc.txt  json  json.cpp
lock/: Makefile  README  lock  lock.cpp
log4cpp/: CMakeLists.txt  main.cpp
logs/: README  main  main.cpp
machine_learning/: gbdt.py  plot_digits_classification.py
machine_learning/test/: id3.py
muduoC++/: CMakeLists.txt  README  template.cpp
multi_thread/: pthread_key  pthread_key.cpp
protobuf/: Makefile  config.file  helloworld.pb.cc  helloworld.pb.h  helloworld.proto  main.cpp  test.config
pyInC++/: Makefile  main  main.cpp
pyInC++/chang/: add.py
python/: argparse_test.py  common_err.py  crawler.py  hello.py  hi.py  instant_tag.py
python/crawler/: crawler.py  script.py
python/sklearn/: similar_doc.py
python/tensorflow/: README  estimator.py  example_estimator_website.py  tensorflow_test.py  test.py
python/threading/: lock_test.py  threading_test.py
python_learn/: Makefile  UserProfileService_server.cpp  request_pushpushufs.py  request_pushufs.py  request_pushufs.py_bak  request_rank_server.py  request_redis.py  request_ufs.py  test.py
python_learn/bak/: README  request_ufs_old.py
python_learn/push/: request_ufs.py
recommend/: matrix_recommend.py
redis/C++version/: CMakeLists.txt  main.cpp  redis-server.cpp  redis-server.h
redis/C++version/test/: CMakeLists.txt  redis-server_test.cpp
redis/PythonVersion/: redis_test.py
rsync/: dest
signal/: Makefile  signal  signal.cpp  signal_test.cpp
supervisor/: hello.py  supervisord.conf
supervisor/conf.d/: hello.ini
test/: Makefile  bind  bind.cpp  callgrind.out.4590  cast  cast.cpp  goto  goto.cpp  ifempty  ifempty.cpp  lock.cpp  map  map.cpp  move  move.cpp  mutable  mutable.cpp  new_handler  new_handler.cpp  noncopyable  noncopyable.cpp  smart_pointer  smart_pointer.cpp  sort  sort.cpp  test  test.cpp  time  time.cpp
thrift/haogedemo/: Makefile  README  client.cpp  server.cpp  student.thrift
thrift/haogedemo/gen-cpp/: Serv.cpp  Serv.h  (+2 more)
thrift/student/: CMakeLists.txt  build.sh  getout_server.skeleton.cpp  main.cpp  student.thrift
thrift/student/gen-before/: Makefile  Serv.cpp  Serv.h  tags
thrift/student/gen-cpp/: getout.cpp  getout.h  getout_server.skeleton.cpp  putin.cpp  putin.h
thrift/student/gen-py/student/: __init__.py  getout-remote  getout.py  putin-remote  putin.py  ttypes.py
thrift/student/thrift/lib/pkgconfig/: thrift-nb.pc  thrift.pc
thrift/thrift_for_redis/: redis.thrift
thrift/tutorial/: CMakeCache.txt  CppClient.cpp  CppServer.cpp  Makefile  build.sh  shared.thrift  tags  tutorial.thrift
vector_rotation/: CMakeLists.txt  README  main.cpp  rotation.cpp  rotation.h  two-sort.cpp  two-sort.h
(+2 files in other folders)
